fixed dark mode links

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,17 +1,70 @@
 /* stylesheets/extra.css */
-
 :root {
   --md-primary-fg-color:        #44546A;
   --md-primary-fg-color--light: #ECB7B7;
   --md-primary-fg-color--dark:  #90030C;
 }
 
-/* Add these rules to set the link color within the main content */
-.md-typeset a {
-  color: blue;
+/* Light mode colors */
+[data-md-color-scheme="default"] {
+  /* Main content link colors */
+  --md-typeset-a-color: #0077BE; /* Vibrant Blue */
+  --md-typeset-a-hover-color: #6C4675; /* Muted Purple */
+  
+  /* Table of contents link colors */
+  --md-toc-link-hover-color: #6E4C5E; /* Deep Mauve */
 }
 
-.md-typeset a:hover, .md-typeset a:focus {
-  color: purple;
+/* Dark mode colors */
+[data-md-color-scheme="slate"] {
+  /* Main content link colors */
+  --md-typeset-a-color: #40E0D0; /* Turquoise */
+  --md-typeset-a-hover-color: #CCAADD; /* Soft Lilac */
+  
+  /* Table of contents link colors */
+  --md-toc-link-hover-color: #EEBB99; /* Peach */
 }
 
+/* Light mode main content link styles */
+[data-md-color-scheme="default"] .md-typeset a {
+  color: var(--md-typeset-a-color);
+}
+
+[data-md-color-scheme="default"] .md-typeset a:hover,
+[data-md-color-scheme="default"] .md-typeset a:focus,
+[data-md-color-scheme="default"] .md-typeset a:active {
+  color: var(--md-typeset-a-hover-color);
+}
+
+/* Light mode table of contents link styles */
+[data-md-color-scheme="default"] .md-nav__item .md-nav__link {
+  color: var(--md-toc-link-color);
+}
+
+[data-md-color-scheme="default"] .md-nav__item .md-nav__link:hover,
+[data-md-color-scheme="default"] .md-nav__item .md-nav__link:focus,
+[data-md-color-scheme="default"] .md-nav__item .md-nav__link--active {
+  color: var(--md-toc-link-hover-color);
+}
+
+/* Dark mode main content link styles */
+[data-md-color-scheme="slate"] .md-typeset a {
+  color: var(--md-typeset-a-color);
+}
+
+[data-md-color-scheme="slate"] .md-typeset a:hover,
+[data-md-color-scheme="slate"] .md-typeset a:focus,
+[data-md-color-scheme="slate"] .md-typeset a:active {
+  color: var(--md-typeset-a-hover-color);
+}
+
+/* Dark mode table of contents link styles */
+[data-md-color-scheme="slate"] .md-nav__item .md-nav__link {
+  color: var(--md-toc-link-color);
+}
+
+[data-md-color-scheme="slate"] .md-nav__item .md-nav__link:hover,
+[data-md-color-scheme="slate"] .md-nav__item .md-nav__link:focus,
+[data-md-color-scheme="slate"] .md-nav__item .md-nav__link--active {
+  color: var(--md-toc-link-hover-color);
+}
